[gd_scene load_steps=11 format=3 uid="uid://c63g47531mikw"]

[ext_resource type="Script" uid="uid://c5l126r8ndd4w" path="res://scripts/fridge.gd" id="1_c4248"]
[ext_resource type="Texture2D" uid="uid://git38kn27621" path="res://assets/tamagotchi background.jpeg" id="2_i0i1l"]
[ext_resource type="Texture2D" uid="uid://dbxnnh61veom3" path="res://assets/buttons/IMG_4211.PNG" id="3_npr5r"]
[ext_resource type="Texture2D" uid="uid://dfhlaxeutpkma" path="res://assets/fridge.PNG" id="4_i0i1l"]
[ext_resource type="Texture2D" uid="uid://ia8744dr5gs1" path="res://assets/foods/IMG_4684.PNG" id="5_cx14s"]
[ext_resource type="Texture2D" uid="uid://185y655pfob0" path="res://assets/foods/IMG_4685.PNG" id="6_3xuj1"]
[ext_resource type="Texture2D" uid="uid://bwpg057bgeecd" path="res://assets/pets/hamster.png" id="6_i0i1l"]
[ext_resource type="Texture2D" uid="uid://c6c24i4h21c88" path="res://assets/mat.png" id="7_npr5r"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mq0tr"]
load_path = "res://.godot/imported/IMG_4745.PNG-009873d1f9ad6d6acc8423879af95f52.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s2lay"]
load_path = "res://.godot/imported/IMG_4702.PNG-6609eb07f4280c1905b7ae38a1505260.ctex"

[node name="Fridge" type="Node2D"]
script = ExtResource("1_c4248")

[node name="MainBG" type="Sprite2D" parent="."]
position = Vector2(-296, 0)
scale = Vector2(1.739, 1.739)
texture = ExtResource("2_i0i1l")
centered = false

[node name="Control" type="Control" parent="MainBG"]
layout_mode = 3
anchor_left = 0.231
anchor_right = 0.794
anchor_bottom = 1.0
offset_left = 0.19676208
offset_right = -0.14019775
offset_bottom = 0.055236816
grow_horizontal = 2
grow_vertical = 2

[node name="back" type="TextureButton" parent="MainBG/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7777778
anchor_top = 0.8687499
anchor_right = 0.95600015
anchor_bottom = 0.96825
offset_right = -0.32006836
offset_bottom = 0.6398926
texture_normal = ExtResource("3_npr5r")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Fridge" type="Sprite2D" parent="."]
position = Vector2(360, 600)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_i0i1l")

[node name="VBoxContainer" type="VBoxContainer" parent="Fridge"]
offset_left = 42.499992
offset_top = -315.0
offset_right = 208.75
offset_bottom = 296.24988
theme_override_constants/separation = 35

[node name="item1" type="Button" parent="Fridge/VBoxContainer"]
layout_mode = 2
text = "




"
icon = ExtResource("5_cx14s")
flat = true
icon_alignment = 1
expand_icon = true

[node name="item2" type="Button" parent="Fridge/VBoxContainer"]
layout_mode = 2
text = "




"
icon = ExtResource("6_3xuj1")
icon_alignment = 1
expand_icon = true

[node name="item3" type="Button" parent="Fridge/VBoxContainer"]
layout_mode = 2
text = "




"
icon = SubResource("CompressedTexture2D_mq0tr")
icon_alignment = 1
expand_icon = true

[node name="item4" type="Button" parent="Fridge/VBoxContainer"]
layout_mode = 2
text = "




"
icon = SubResource("CompressedTexture2D_s2lay")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PET" type="Sprite2D" parent="."]
position = Vector2(184, 1088)
texture = ExtResource("6_i0i1l")

[node name="Mat" type="Sprite2D" parent="PET"]
show_behind_parent = true
position = Vector2(0, 98)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_npr5r")

[connection signal="pressed" from="MainBG/Control/back" to="." method="_on_back_pressed"]
